force-app/main/default/objects/vlocity_ps__SP_Preference__c/vlocity_ps__SP_Preference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For storing the Service Provider Matching settings that are selected in the Admin UI.</description>
    <label>SP Preference</label>
</CustomObject>