force-app/main/default/objects/vlocity_ps__SP_Preference__c/fields/vlocity_ps__Active_Contract__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Active_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Contracts for Matching</label>
    <type>Checkbox</type>
</CustomField>