force-app/main/default/objects/vlocity_ps__SP_Preference__c/fields/vlocity_ps__Additional_Criteria__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Additional_Criteria__c</fullName>
    <label>Additional Criteria</label>
    <type>TextArea</type>
</CustomField>