force-app/main/default/objects/vlocity_ps__SP_Preference__c/fields/vlocity_ps__Partial_match__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Partial_match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Partial Matches</label>
    <type>Checkbox</type>
</CustomField>