force-app/main/default/objects/vlocity_ps__SP_Preference__c/fields/vlocity_ps__Region_Match__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Region_Match__c</fullName>
    <label>Geography</label>
    <length>255</length>
    <type>Text</type>
</CustomField>